--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -97,7 +97,7 @@
 					<section  class="wrapper style1 fullscreen">
 						<div class="inner">
 							<h2>Design for Motivation & Behavior Change</h2>
-							<p>Using notes from Discovery, we conducted a <b><a href="https://www.researchgate.net/publication/51070630_The_Behaviour_Change_Wheel_a_new_method_for_characterising_and_designing_behaviour_change_interventions">behavioral analysis</a></b> to examine barriers and opportunities to motivate coaches to take action and maximize success  from using our product. The diagram below was inspired by Dustin DiTomasso and Amy Bucher of mad*pow.</p>
+							<p>Using notes from Discovery, we conducted a <b><a href="https://www.researchgate.net/publication/51070630_The_Behaviour_Change_Wheel_a_new_method_for_characterising_and_designing_behaviour_change_interventions">behavioral analysis</a></b> to examine barriers and opportunities to motivate coaches to take action and maximize success  from using our product. The diagram below was inspired by <a href="twitter.com/du5tb1n">Dustin DiTomasso</a> and <a href="https://twitter.com/amybphd">Amy Bucher</a> of mad*pow.</p>
 							<span class="image fit"><img src="comb.png" alt=""/></span>
 														<p>Capability, Motivation, and Opportunity have two aspects each, which we targetted with design tactics.</p>
 																 <table>
