--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -94,42 +94,73 @@
 					</div>
 					</section>
 
-					<section  class="wrapper style1 fullscreen">
+					<section class="wrapper style1">
 						<div class="inner">
-							<h2>Design for Motivation & Behavior Change</h2>
-							<p>Using notes from Discovery, we conducted a <b><a href="https://www.researchgate.net/publication/51070630_The_Behaviour_Change_Wheel_a_new_method_for_characterising_and_designing_behaviour_change_interventions">behavioral analysis</a></b> to examine barriers and opportunities to motivate coaches to take action and maximize success  from using our product. The diagram below was inspired by <a href="twitter.com/du5tb1n">Dustin DiTomasso</a> and <a href="https://twitter.com/amybphd">Amy Bucher</a> of mad*pow.</p>
-							<span class="image fit"><img src="comb.png" alt=""/></span>
-														<p>Capability, Motivation, and Opportunity have two aspects each, which we targetted with design tactics.</p>
-																 <table>
-																	 <tbody>
-																		 <tr>
-																			 <td style="background-color: #e0402b;"><b>PSYCHOLOGICAL CAPABILITY</b></td>
-																			 <td>Coaches lacked knowledge on facilitating habit formation with groups of clients.</td>
-																		 </tr>
-																		 <tr>
-																			 <td style="background-color: #e0402b;"><b>PHYSICAL CAPABILITY</b></td>
-																			 <td>—</td>
-																		 </tr>
-																		 <tr>
-																			 <td style="background-color: #f88432;"><b>REFLECTIVE MOTIVATION</b></td>
-																			 <td>Coaches needed feel the value of the Habitry iOS app to use it.</td>
-																		 </tr>
-																		 <tr>
-																			 <td style="background-color: #f88432;"><b>AUTOMATIC MOTIVATION</b></td>
-																			 <td>Coaches needed to experience success in each session with the app to keep using it.</td>
-																		 </tr>
-																		 <tr>
-																			 <td style="background-color: #00b342;"><b>PHYSICAL OPPORTUNITY</b></td>
-																			 <td>Coaches needed enough time in their daily schedule to launch and maintain client groups on Habitry iOS.</td>
-																		 </tr>
-																		 <td style="background-color: #00b342;"><b>SOCIAL OPPORTUNITY</b></td>
-																		 <td>Coaches needed a community of peers to support their motivation to keep using the Habitry iOS app.</td>
-																	 </tr>
-																	 </tbody>
-																 </table>
+						<div class="row">
+									<!-- Text -->
+										<div class="4u">
+											<h2>Ideation</h2>
+										</div>
+									 <div class="8u$">
+										 <h4>Defining Requirements</h4>
+										 <p>Using notes from Discovery, we developed personas of both coaches and clients to guide us through the ideation process. Initial customer development suggested our product would have to: </p>
+			 							<ol>
+			 								<li>Be mobile first (and on iOS specifically)</li>
+			 								<li>Allow clients to interact with each other</li>
+			 								<li>Provide Direct Messaging between coaches and clients</li>
+			 								<li>Focus on a few key metrics shared by coaches and clients</li>
+			 								<li>Be flexible enough to let coaches drive the content-creation</li>
+			 								<li>Come coupled with a rich onboarding and education system for coaches</li>
+			 							</ol>
+									 </div>
+						</div>
 					</div>
 					</section>
 
+					<section class="wrapper style1">
+						<div class="inner">
+						<div class="row">
+									<!-- Text -->
+										<div class="4u">
+											<h2>The Secret Sauce</h2>
+										</div>
+									 <div class="8u$">
+										 <h4>Design for Motivation & Behavior</h4>
+										 <p>The best features in the world would have been useless if coaches didn't take advantage of them. We conducted a <a href="https://www.researchgate.net/publication/51070630_The_Behaviour_Change_Wheel_a_new_method_for_characterising_and_designing_behaviour_change_interventions">behavioral analysis</a> to examine barriers and opportunities to motivate coaches to take action and maximize their odds of success from using our product. The diagram below was inspired by <a href="twitter.com/du5tb1n">Dustin DiTomasso</a> and <a href="https://twitter.com/amybphd">Amy Bucher</a> of mad*pow.</p>
+			 							<span class="image fit"><img src="comb.png" alt=""/></span>
+
+									 <table>
+										 <tbody>
+											 <tr>
+												 <td style="background-color: #e0402b;"><b>PSYCHOLOGICAL CAPABILITY</b></td>
+												 <td>Coaches lacked knowledge on facilitating habit formation with groups of clients.</td>
+											 </tr>
+											 <tr>
+												 <td style="background-color: #e0402b;"><b>PHYSICAL CAPABILITY</b></td>
+												 <td>—</td>
+											 </tr>
+											 <tr>
+												 <td style="background-color: #f88432;"><b>REFLECTIVE MOTIVATION</b></td>
+												 <td>Coaches needed feel the value of the Habitry iOS app to use it.</td>
+											 </tr>
+											 <tr>
+												 <td style="background-color: #f88432;"><b>AUTOMATIC MOTIVATION</b></td>
+												 <td>Coaches needed to experience success in each session with the app to keep using it.</td>
+											 </tr>
+											 <tr>
+												 <td style="background-color: #00b342;"><b>PHYSICAL OPPORTUNITY</b></td>
+												 <td>Coaches needed enough time in their daily schedule to launch and maintain client groups on Habitry iOS.</td>
+											 </tr>
+											 <td style="background-color: #00b342;"><b>SOCIAL OPPORTUNITY</b></td>
+											 <td>Coaches needed a community of peers to support their motivation to keep using the Habitry iOS app.</td>
+										 </tr>
+										 </tbody>
+									 </table>
+
+									 </div>
+						</div>
+					</div>
+					</section>
 					<section class="wrapper style1">
 						<div class="inner"</div>
 						<div style="background-color: #b74e91;" class="box">
