--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -190,7 +190,10 @@
 
 								<p>We helped coaches to get started with as little fuss as possible by designing a great onboarding experience (Shaping Knowledge, Goal-Setting, Valued Self-Identity), habits to use with clients (Shaping Knowledge).
 
-								<p>We also built an analytics system that generated insights (Feedback on Behavior & Re-attribition) so they could better manage their groups.</p>
+								<p>We also built an analytics system that generated insights (Feedback on Behavior & Re-attribition) so they could better manage their groups. For example, we did text analysis to measure changes in use of words that are markers of <a href="http://habitry.link/motivating-humans">Basic Psychological Need</a> support. This gave coaches insight into how well they were motivating clients in their groups.
+
+
+								</p>
 						</div>
 					</section>
 
