--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -119,14 +119,8 @@
 
 					<section class="wrapper style1">
 						<div class="inner">
-						<div class="row">
-									<!-- Text -->
-										<div class="4u">
-											<h2>The Secret Sauce</h2>
-										</div>
-									 <div class="8u$">
-										 <h3>Design for Motivation & Behavior</h3>
-										 <p>The best features in the world would have been useless if coaches didn't take advantage of them. We conducted a <a href="https://www.researchgate.net/publication/51070630_The_Behaviour_Change_Wheel_a_new_method_for_characterising_and_designing_behaviour_change_interventions">behavioral analysis</a> to examine barriers and opportunities to motivate coaches to take action and maximize their odds of success from using our product. The diagram below was inspired by <a href="twitter.com/du5tb1n">Dustin DiTomasso</a> and <a href="https://twitter.com/amybphd">Amy Bucher</a> of mad*pow.</p>
+										<h2>Motivating User Behavior</h2>
+										 <p>The best features in the world would have been useless if coaches didn't take advantage of them. We conducted a <b><a href="https://www.researchgate.net/publication/51070630_The_Behaviour_Change_Wheel_a_new_method_for_characterising_and_designing_behaviour_change_interventions">behavioral analysis</a></b> to examine barriers and opportunities to motivate coaches to take action and maximize their odds of success from using our product. The diagram below was inspired by <a href="twitter.com/du5tb1n">Dustin DiTomasso</a> and <a href="https://twitter.com/amybphd">Amy Bucher</a> of mad*pow.</p>
 			 							<span class="image fit"><img src="comb.png" alt=""/></span>
 
 									 <table>
@@ -156,10 +150,7 @@
 										 </tr>
 										 </tbody>
 									 </table>
-
-									 </div>
-						</div>
-					</div>
+					 </div>
 					</section>
 					<section class="wrapper style1">
 						<div class="inner"</div>
