--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -56,7 +56,7 @@
 
 					</section>
 
-					<section id="motivationproblem" class="wrapper style1">
+					<section class="wrapper style1">
 						<div class="inner style1">
 							<span class="image left titleimg"><img src="discovery.jpg" alt=""/></span>
 
