--- a/projects/habitrypros/index.html
+++ b/projects/habitrypros/index.html
@@ -179,7 +179,7 @@
 											<h2>Killer Feature: Essentials of Habit Coaching</h2>
 											<span class="image right"><img src="essentials.png" width=alt=""/></span>
 											<p>The core feature of Habitry Professionals was Essentials of Habit Coaching, a six week digital learning program that taught health coaches the basics of supporting client behavior change, and inducted them into the Habitry Professionals community.</p>
-											<p>At the end of Essentials coaches were given the opportunity to coach under observation and be given real, honest feedback on your mastery of the Essential Habit Coaching Skills they learned in the program.</p>
+											<p>At the end of Essentials coaches were given the opportunity to coach under observation and be given real, honest feedback on their mastery of the Essential Habit Coaching Skills they learned in the program.</p>
 											<p>Our patented and trademarked "Habitry Evaluation Logic Level" gave coaches motivational feedback on how much they improved, and what areas they needed to focus on in order to attain true Motivator status.</p>
 											<p>Later on, the team developed an algorithm for analyzing and delivering motivating feedback that would become the core of Habitry's product and content auditing tools.</p>
 										</div>
