--- a/projects/habitrypros/index.html
+++ b/projects/habitrypros/index.html
@@ -125,7 +125,7 @@
 																 <td>Coaches needed time and energy in their daily schedule to practice new skills.</td>
 															 </tr>
 															 <td style="background-color: #00b342;"><b>SOCIAL OPPORTUNITY</b></td>
-															 <td>Coaches need a peer group to practice new skills without fear of judgement.</td>
+															 <td>Coaches needed a peer group to practice new skills without fear of judgement.</td>
 														 </tr>
 														 </tbody>
 													 </table>
@@ -147,7 +147,7 @@
 
 											<h2>Improving Capability</h2>
 											<p>We improved Capability by targeting Knowledge and Skills. We provided information on how to support client habit formation and motivation. We developed skills-based training and workshops based on Motivational Interviewing and Self-Determination Theory.</p>
-											<p>We used the Behavior Change Techniques of Goals-Setting, Action Planning, Behavioral Contracts, Shaping Knowledge, Demonstration of Behavior, and Self-Monitoring of Behavior.</p>
+											<p>We used the Behavior Change Techniques of Shaping Knowledge, Demonstration of Behavior, and Habit Formation.</p>
 										</div>
 									</section>
 
@@ -156,7 +156,7 @@
 											<span class="image left"><img src="discussion.png" alt=""/></span>
 
 											<h2>Improving Motivation</h2>
-												<p>The next step was to improve Motivation. We improved motivation by targeting Beliefs about Capabilities, Optimism, Goals, and Professional Identity.</p>
+												<p>The next step was to improve Motivation. We improved motivation by targeting Beliefs about Capabilities, Optimism, Goals, and Professional Identity. We used the Behavior Change Techniques of Goal-Setting, Action Planning, Behavioral Contracts, </p>
 												<p>We supported coach Autonomy with the provision of Meaningful Choice and Rationales, Avoidance of Control.	</p>
 												<p>We supported coach Competence by Clarifying Expectations, providing Optimal Challenge, and giving Meaningful Feedback.</p>
 
@@ -168,7 +168,7 @@
 											<span class="image left"><img src="support.png" alt=""/></span>
 
 											<h2>Improving Opportunity</h2>
-												<p>We improved Opportunity by targeting Environmental Restructuring.</p>
+												<p>We improved Opportunity by targeting Environmental Restructuring. We used the Behavior Change Techniques of Prompts/Cues & Covert Learning.</p>
 												 <p>We create performance aids to support practice while coaches were with peers and clients. We also supported Relatedness by creating a community with ongoing Connection, Collaboration, and Compassion from peers. It became a place that fostered a positive Professional Identity with ongoing Social Support.</p>
 										</div>
 									</section>
