--- a/projects/habitrypros/index.html
+++ b/projects/habitrypros/index.html
@@ -168,8 +168,8 @@
 											<span class="image left"><img src="support.png" alt=""/></span>
 
 											<h2>Improving Opportunity</h2>
-												<p>We improved Opportunity by targeting Environmental Restructuring. We used the Behavior Change Techniques of Prompts/Cues & Covert Learning.</p>
-												 <p>We create performance aids to support practice while coaches were with peers and clients. We also supported Relatedness by creating a community with ongoing Connection, Collaboration, and Compassion from peers. It became a place that fostered a positive Professional Identity with ongoing Social Support.</p>
+												<p>We improved Opportunity by targeting Environmental Restructuring. We used the Behavior Change Techniques of Prompts/Cues, Covert Learning, Valued Self-Identity, and Social Support.</p>
+												 <p>We create performance aids to support practice while coaches were with peers and clients. We also supported Relatedness by creating a community with ongoing Connection, Collaboration, and Compassion from peers. </p>
 										</div>
 									</section>
 
