--- a/projects/habitrypros/index.html
+++ b/projects/habitrypros/index.html
@@ -193,7 +193,7 @@
 															<h2>The Product</h2>
 														</div>
 													 <div class="8u$">
-														 <span class="image"><img src="habitrypros.png" width=alt=""/></span>
+														 <span class="image fit"><img src="habitrypros.png" width=alt=""/></span>
 
 													 </div>
 										</div>
