--- a/projects/habitrypros/index.html
+++ b/projects/habitrypros/index.html
@@ -156,7 +156,7 @@
 											<span class="image left"><img src="discussion.png" alt=""/></span>
 
 											<h2>Improving Motivation</h2>
-												<p>The next step was to improve Motivation. We improved motivation by targeting Beliefs about Capabilities, Optimism, Goals, and Professional Identity. We used the Behavior Change Techniques of Goal-Setting, Action Planning, Behavioral Contracts, </p>
+												<p>The next step was to improve Motivation. We improved motivation by targeting Beliefs about Capabilities, Optimism, Goals, and Professional Identity. We used the Behavior Change Techniques of Goal-Setting, Action Planning, and Behavioral Contracts.</p>
 												<p>We supported coach Autonomy with the provision of Meaningful Choice and Rationales, Avoidance of Control.	</p>
 												<p>We supported coach Competence by Clarifying Expectations, providing Optimal Challenge, and giving Meaningful Feedback.</p>
 
