--- a/projects/habitrypros/index.html
+++ b/projects/habitrypros/index.html
@@ -114,7 +114,7 @@
 															 </tr>
 															 <tr>
 																 <td style="background-color: #f88432;"><b>REFLECTIVE MOTIVATION</b></td>
-																 <td>Coaches lacked confidence and didn't value supporting <a href="http://habitry.link/motivating-humans">Basic Psychological Needs</a></td>
+																 <td>Coaches lacked confidence and didn't value supporting <a href="http://habitry.link/motivating-humans">Basic Psychological Needs</a>.</td>
 															 </tr>
 															 <tr>
 																 <td style="background-color: #f88432;"><b>AUTOMATIC MOTIVATION</b></td>
