--- a/resume/index.html
+++ b/resume/index.html
@@ -62,7 +62,7 @@
 	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Enabled Habitry to start-up, pivot, grow, and sell our SaaS business services in the coaching industry.</li>
 	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Managed product life cycles, from ideation to launch to refinement of products that helped increase customer engagement by 2x and retention by 10x.</li>
 											<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Managed  consulting projects, which led to improved customer, employee, and business outcomes.</li>
-	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Developed an analytics system to generate coaching insights for Habitry customers and drive their adoption of Habitry services.</li>
+	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>— Implemented analytics and evaluation strategy to glean product insights and drive adoption of Habitry services.</li>
 
 	                  </ul>
 	                  </div>
