--- a/projects/motivatinghumans/index.html
+++ b/projects/motivatinghumans/index.html
@@ -23,7 +23,7 @@
 				<nav>
 					<ul>
 						<li><a href="../../">Home</a></li>
-						<li><a href="../../#projects">Projects</a></li>
+						<li><a href="../">Projects</a></li>
 						<li><a class="active" href="#">Humans</a></li>
 					</ul>
 				</nav>
