--- a/resume/index.html
+++ b/resume/index.html
@@ -291,9 +291,9 @@
 	                    <div class="project_card-highlights">
 	                    <ul class="fa-ul">
 
-	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Designed and created a proprietary LMS to deliver a year-long group education platform in support of Habitry iOS.</li>
+	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Designed and created a proprietary Learning Management System to deliver a year-long group education platform in support of Habitry iOS.</li>
 
-	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Built, maintained, and marketed with a team of 3 producing daily content.</li>
+	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Built, maintained, and marketed with a team of 3 producing daily evidence-based, actionable, engaging content for a professional non-academic audience.</li>
 
 	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Sold product and co-developed platform into the largest behavior change education in the UK.</li>
 
