--- a/projects/habitrypros/index.html
+++ b/projects/habitrypros/index.html
@@ -146,7 +146,7 @@
 											<span class="image left"><img src="workshop.png" alt=""/></span>
 
 											<h2>Improving Capability</h2>
-											<p>We improved Capability by targeting Knowledge and Skills. We provided information on how to support client habit formation and motivation. We developed skills-based training and workshops based on Motivational Interviewing and Self-Determination Theory.</p>
+											<p>We improved Capability by targeting Knowledge and Skills. We provided information on how to support client habit formation and motivation. We developed skills-based training and workshops based on Self-Determination Theory, Dual-Process Model of Habit Formation, and Motivational Interviewing.</p>
 											<p>We used the Behavior Change Techniques of Shaping Knowledge, Demonstration of Behavior, and Habit Formation.</p>
 										</div>
 									</section>
@@ -157,7 +157,7 @@
 
 											<h2>Improving Motivation</h2>
 												<p>The next step was to improve Motivation. We improved motivation by targeting Beliefs about Capabilities, Optimism, Goals, and Professional Identity. We used the Behavior Change Techniques of Goal-Setting, Action Planning, and Behavioral Contracts.</p>
-												<p>We supported coach Autonomy with the provision of Meaningful Choice and Rationales, Avoidance of Control.	</p>
+												<p>We supported coach Autonomy with the provision of Meaningful Choice, Rationales, and Avoidance of Control.	</p>
 												<p>We supported coach Competence by Clarifying Expectations, providing Optimal Challenge, and giving Meaningful Feedback.</p>
 
 										</div>
