--- a/resume/index.html
+++ b/resume/index.html
@@ -59,11 +59,11 @@
 									<p class="companydescription">Habitry helps companies in health-tech, sales, and financial-tech build products and services that motivate people to change their behavior.</p>
 	                  <div class="highlights">
 	                  <ul class="fa-ul">
-	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Enabled Habitry to start-up, pivot, grow, and sell our SaaS business services in the coaching industry.</li>
-	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Managed product life cycles, from ideation to launch to refinement of products that helped increase customer engagement by 2x and retention by 10x.</li>
-											<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Managed  consulting projects, which led to improved customer, employee, and business outcomes.</li>
-	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Implemented analytics and evaluation strategy to glean product and program insights to drive adoption of Habitry services.</li>
-
+	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Enabled Habitry to build, pivot, and sell our SaaS services in the coaching industry.</li>
+	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Managed product life cycles (discovery/design/development) to increase customer engagement by 2x and retention by 10x.</li>
+											<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Managed consulting projects to improve customer and business outcomes.</li>
+	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Implemented analytics to glean product/program insights to drive adoption of services.</li>
+											<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span> Guided Habitry coaches through challenging scenarios and conversations to optimize their coaching experience with Habitry. </li>
 	                  </ul>
 	                  </div>
 
@@ -76,9 +76,9 @@
 	                  <div class="highlights">
 	                  <ul class="fa-ul">
 
-	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Built dashboards and reports that simplified complex financial data to improve decision making for executives.</li>
+	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Built dashboards and reports that simplified financial data to improve decision making for executives.</li>
 
-	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Partnered with Project Managers to organize Professional Development Summits and launch of an online community of practice that increased best practice adoption.</li>
+	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Partnered with Project Managers to organize Professional Development Summits and launch  an online community of practice that increased best practice adoption.</li>
 
 	                  </ul>
 	                  </div>
@@ -295,7 +295,7 @@
 
 	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Built, maintained, and marketed with a team of 3 producing daily evidence-based, actionable, and engaging content for a professional non-academic audience.</li>
 
-	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Sold product and co-developed platform into the largest behavior change education in the UK.</li>
+	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Sold product and co-developed into largest behavior change education platform in  UK.</li>
 
 	                    </ul>
 	                    </div>
@@ -319,11 +319,11 @@
 										<div class="project_card-highlights">
 										<ul class="fa-ul">
 
-											<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Designed, tested, and adapted curriculum based on user testing, stakeholder analysis, and literature reviews.</li>
+											<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Designed and refined curriculum with user testing and literature reviews.</li>
+
+											<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span> Guided Habitry coaches through common challenging scenarios and conversations.</li>
 
 											<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Produced written content to market the product.</li>
-
-											<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Based on practical application of Self-Determination Theory, Dual-Process Model of Habit Formation, and Motivational Interviewing.</li>
 										</ul>
 										</div>
 									<!-- </div> -->
