--- a/resume/index.html
+++ b/resume/index.html
@@ -261,7 +261,7 @@
 	                    <div class="project_card-highlights">
 	                    <ul class="fa-ul">
 
-	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Enabled executive and product team to define the problem space, context, and outcome goals by conducting behavioral diagnosis, stakeholder analysis, and literature review. </li>
+	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Enabled executive and product team to define the problem space, context, and outcome goals by conducting behavioral diagnosis, stakeholder analysis, and literature reviews. </li>
 
 	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Developed user stories, user journeys, and detailed behavioral plans for product team to enable users to take action and receive value from the product.</li>
 
@@ -319,7 +319,7 @@
 										<div class="project_card-highlights">
 										<ul class="fa-ul">
 
-											<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Designed and refined curriculum with user testing and literature reviews.</li>
+											<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Designed and refined curriculum with user testing, stakeholder analysis, and literature reviews.</li>
 
 											<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span> Guided Habitry coaches through common challenging scenarios and conversations.</li>
 
