--- a/resume/index.html
+++ b/resume/index.html
@@ -62,7 +62,7 @@
 	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Enabled Habitry to build, pivot, and sell our SaaS services in the coaching industry.</li>
 	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Managed product life cycles (discovery/design/development) to increase customer engagement by 2x and retention by 10x.</li>
 											<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Managed consulting projects to improve customer and business outcomes.</li>
-	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Implemented analytics to glean product/program insights to drive adoption of services.</li>
+	                    <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Implemented analytics to glean product/program insights to drive improvement and adoption.</li>
 											<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span> Guided Habitry coaches through challenging scenarios and conversations to optimize their coaching experience with Habitry. </li>
 	                  </ul>
 	                  </div>
