--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -79,7 +79,7 @@
 							<span class="image titleimg left "><img src="vision.jpg" width=alt=""/></span>
 							<h2>The Approach</h2>
 
-							<p>Habitry took a Lean UX approach to figuring out potential customer pain points, potential solutions, and how to measure the results.</p>
+							<p>Habitry took a Lean UX approach to figuring out potential customer pain points, potential solutions, and how to evaluate our ongoing efforts.</p>
 							<p>This meant front-loading a lot of hypothesis testing with rapid prototyping, customer interviews, and mock ups.</p>
 					</div>
 					</section>
