--- a/projects/habitrypros/index.html
+++ b/projects/habitrypros/index.html
@@ -62,7 +62,7 @@
 
 											<h2>A Learning Design Problem</h2>
 											<p>The health coach industry is relatively inexperienced and rife with turnover. </p>
-											<p>Yet building coaching competence requires time and access to expensive education.</p>
+											<p>Yet building coaching competence takes time, resources, and a high-touch, costly approach.</p>
 										</div>
 									</section>
 
