--- a/projects/habitrypros/index.html
+++ b/projects/habitrypros/index.html
@@ -79,7 +79,7 @@
 											<span class="image titleimg left "><img src="vision.jpg" width=alt=""/></span>
 											<h2>The Approach</h2>
 
-											<p>Already supporting <a href="../habitryios/">Habitry iOS</a>, Habitry took a launch fast and build the wings in the air approach on this project. This meant getting a front-end up first, then using off-the-shelf tools to make a webapp that could be adapted and iterated on.</p>
+											<p>As with <a href="../habitryios/">Habitry iOS</a>, we took a Lean UX approach to figuring out potential customer pain points, testing potential solutions, and evaluating our ongoing efforts to iterate rapidly toward the right product. This meant getting a front-end up first, then using off-the-shelf tools to make a webapp that could be adapted and iterated on.</p>
 											<p>This was Habitry's first Learning Design product. We leaned heavily on the approach to Learning Design developed by <a href="http://usablelearning.com">Julie Dirksen</a> and the <em>Lens of Intrinsic Skill Atoms</em> developed by <a href="http://codingconduct.cc">Sebastian Deterding</a>.</p>
 									</div>
 									</section>
@@ -90,7 +90,7 @@
 											<h2>Discovery</h2>
 
 											<p>On the advice of Angel Investor <a href="https://www.wikiwand.com/en/Jesse_Robbins">Jesse Robbins</a>, Habitry started a series of <a href="https://www.wikiwand.com/en/Unconference">Unconferences</a> — <b><a href="http://www.motivatesumm.it">The Motivate Summits</a></b>. These open, unscripted gatherings proved to be a fertile ground for exploring the non-technical approaches that health coaches were using, and the great lengths to which they were going to scale their businesses into "the other 167 hours" a week they were not with their clients.</p>
-											<p>Once Habitry had customers using Habitry iOS, we also brought in those customers for interviews. These interviews highlighted the gaps between the skills that most coaches had, and the skills they wanted to learn.</p>
+											<p>Once Habitry had customers using Habitry iOS, we also brought in those customers for interviews. These interviews highlighted  gaps between between the skills they had and wanted to learn, and their learning experiences with the solutions they were already using to improve their coaching skills. </p>
 									</div>
 									</section>
 
