--- a/projects/habitrypros/index.html
+++ b/projects/habitrypros/index.html
@@ -96,9 +96,32 @@
 
 									<section class="wrapper style1">
 										<div class="inner">
-											<h2>Defining Product Requirements</h2>
+										<div class="row">
+													<!-- Text -->
+														<div class="4u">
+															<h2>Ideation</h2>
+														</div>
+													 <div class="8u$">
+														 <h3>Defining Requirements</h3>
+														 <p>Using notes from the Discovery process, we developed personas of both coaches and clients to guide us through the ideation process. Initial customer development suggested our product would have to: </p>
+														<ol>
+															<li>Be available cross-platform</li>
+															<li>Empower coaches to interact with and support each other</li>
+															<li>Generate daily content</li>
+															<li>Deliver coaches daily feedback on their progress</li>
+															<li>Be based on a UI they were already familar with</li>
+															<li>Grow and include new coaches at wildly differing skill levels</li>
+														</ol>
+													 </div>
+										</div>
+									</div>
+									</section>
 
-											<p>Using notes from the Discovery process, we developed personas of the coaches to guide us through the ideation process. We conducted a <b><a href="https://www.researchgate.net/publication/51070630_The_Behaviour_Change_Wheel_a_new_method_for_characterising_and_designing_behaviour_change_interventions">behavioral analysis</a></b> to examine barriers and opportunities to motivate coaches to take action to build their skills. The diagram below was inspired by <a href="twitter.com/du5tb1n">Dustin DiTomasso</a> and <a href="https://twitter.com/amybphd">Amy Bucher</a> of mad*pow.</p>
+									<section class="wrapper style1">
+										<div class="inner">
+											<h2>Motivating User Behavior</h2>
+
+											<p>Next we conducted a <b><a href="https://www.researchgate.net/publication/51070630_The_Behaviour_Change_Wheel_a_new_method_for_characterising_and_designing_behaviour_change_interventions">behavioral analysis</a></b> to examine barriers and opportunities to motivate coaches to take action to build their skills. The diagram below was inspired by <a href="twitter.com/du5tb1n">Dustin DiTomasso</a> and <a href="https://twitter.com/amybphd">Amy Bucher</a> of mad*pow.</p>
 
 							 							<span class="image fit"><img src="comb.png" alt=""/></span>
 														<p>One of the first things that stood out to us was that health coaches did not have an alternative for long-term skills education. Most coaches got a certification, then no other feedback on their skill development for the rest of their career. To state the obvious, becoming a better coach required practice. Early in their career, most coaches did not know how to practice, and they lacked the confident to try new skills with clients. </p>
