--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<section>
 										<span class="icon major fa-university"></span>
 										<h3>Essentials of Habit Coaching</h3>
-										<p>A six-week digital learning program for coaches. Sold by Habitry in 2016.</p>
+										<p>A seven-week digital learning program for coaches. Sold by Habitry in 2016.</p>
 										<a href="http://ganai.com/projects/essentials/" class="button fit">Learn More</a>
 									</section>
 									<section>
