--- a/resume/index.html
+++ b/resume/index.html
@@ -315,7 +315,7 @@
 													<span class="italic">UX & Motivation Design, </span>
 													<span class="italic">Coaching & Facilitation</span>
 											</p>
-										<p class="project_card-description">Habitry's flagship online learning program for coaches. A six week introduction to Habitry's methods for producing lasting behavior change.</p>
+										<p class="project_card-description">Habitry's flagship online learning program for coaches. A seven-week introduction to Habitry's methods for producing lasting behavior change.</p>
 										<div class="project_card-highlights">
 										<ul class="fa-ul">
 
