--- a/projects/essentials/index.html
+++ b/projects/essentials/index.html
@@ -50,7 +50,7 @@
 
 														<p>In 2014, Omar teamed up with <a href="http://habitry.com">Habitry</a> co-founders Steven M. Ledbetter and Vanessa Naylon to work on our mission of <b>"helping the most people to help the most people"</b> by making products for health coaches.</p>
 
-														<p>After launching <a href="../habitryios/">Habitry iOS</a>, coaches began to ask Habitry for a more comprehensive education product that would allow them to bring the behavioral psychology techniques they had been introduced to in the iOS app into real world settings.</p> <p>This is the story of how Omar made Essentials of Habit Coaching, the core feature of <a href="../habitrypros">Habitry Professionals</a>, the first evidence-based, behavior change education platform for health coaches. </p>
+														<p>After launching <a href="../habitryios/">Habitry iOS</a>, coaches began to ask Habitry for a more comprehensive education product that would allow them to bring the behavioral psychology techniques they had been introduced to in the iOS app into real world settings.</p> <p>This is the story of how Omar made Essentials of Habit Coaching, the core feature of <a href="../habitrypros">Habitry Professionals</a>. </p>
 
 													</div>
 
