--- a/projects/essentials/index.html
+++ b/projects/essentials/index.html
@@ -61,7 +61,7 @@
 														<span class="image left titleimg"><img src="discovery.jpg" alt=""/></span>
 
 														<h2>A Learning Design Problem</h2>
-														<p>Thanks to Motivation and Behavior Change Science, we've known how to help people change their behavior change for over 40 years.</p>
+														<p>Thanks to Motivation and Behavior Change Science, we've known how to help people change their behavior for over 40 years.</p>
 														<p>Yet the practical know-how from this vast evidence base has remained out of the reach of coaching professionals.</p>
 														<p>Because building coaching competence takes time, resources, and a high-touch, costly approach. So the coaching industry remains filled with quackery, employee disengagement, and turnover.</p>
 
