--- a/projects/habitrypros/index.html
+++ b/projects/habitrypros/index.html
@@ -61,8 +61,9 @@
 											<span class="image left titleimg"><img src="discovery.jpg" alt=""/></span>
 
 											<h2>A Learning Design Problem</h2>
-											<p>The health coach industry is relatively inexperienced and rife with turnover. </p>
-											<p>Yet building coaching competence takes time, resources, and a high-touch, costly approach.</p>
+											<p>Thanks to Motivation and Behavior Change Science, we've known how to help people change their behavior for over 40 years.</p>
+											<p>Yet the practical know-how from this vast evidence base has remained out of the reach of coaching professionals.</p>
+											<p>Because building coaching competence takes time, resources, and a high-touch, costly approach. So the coaching industry remains filled with quackery, employee disengagement, and turnover.</p>
 										</div>
 									</section>
 
