--- a/projects/essentials/index.html
+++ b/projects/essentials/index.html
@@ -112,7 +112,7 @@
 																		<li>Allow the instructor to provide ongoing support at scale </li>
 																		<li>Guide coaches on dealing with challenging scenarios and conversations</li>
 																		<li>Fill the feedback vacuum coaches found themselves in.</li>
-																		<li>- Include group discussions so students could share their questions and comments with the instructor and peers</li>
+																		<li>Include group discussions so students could share their questions and comments with the instructor and peers</li>
 																		<li>Provide evidence-based, actionable, engaging content</li>
 																	</ol>
 																	<p>These features were validated against the work done by researcher and intervention designer <a href="http://www.johnmarshallreeve.org">Johnmarshall Reeve</a>.
