--- a/projects/essentials/index.html
+++ b/projects/essentials/index.html
@@ -200,13 +200,12 @@
 												</section>
 
 												<section class="wrapper style1">
-													<div class="inner"</div>
-													<div style="background-color: #b74e91;" class="box">
+													<div class="inner">
+
 														<h2>A Coach's Learning Journey through <i>Essentials</i></h2>
 														<p>There were four phases to the Essentials program.</b></p>
 														<span class="image"><img src="essentialsphases.png" alt=""/></span>
-
-													</div>
+												 </div>
 												</section>
 
 												<section class="wrapper style1">
