--- a/projects/essentials/index.html
+++ b/projects/essentials/index.html
@@ -204,7 +204,7 @@
 
 														<h2>A Coach's Learning Journey through <i>Essentials</i></h2>
 														<p>There were four phases to the Essentials program.</b></p>
-														<span class="image"><img src="essentialsphases.png" alt=""/></span>
+														<span class="image fit"><img src="essentialsphases.png" alt=""/></span>
 												 </div>
 												</section>
 
