--- a/projects/essentials/index.html
+++ b/projects/essentials/index.html
@@ -99,26 +99,21 @@
 
 												<section class="wrapper style1">
 													<div class="inner">
-													<div class="row">
-																<!-- Text -->
-																	<div class="4u">
-																		<h2>Ideation</h2>
-																	</div>
-																 <div class="8u$">
-																	 <h3>Defining Requirements</h3>
-																	 <p>Using notes from the Discovery process, we developed personas of both coaches and clients to guide us through the ideation process. Initial customer development suggested our product would have to: </p>
-																	<ol>
-																		<li>Deliver a hyper practical training experience across multiple sessions</li>
-																		<li>Allow the instructor to provide ongoing support at scale </li>
-																		<li>Guide coaches on dealing with challenging scenarios and conversations</li>
-																		<li>Fill the feedback vacuum coaches found themselves in.</li>
-																		<li>Include group discussions so students could share their questions and comments with the instructor and peers</li>
-																		<li>Provide evidence-based, actionable, engaging content</li>
-																	</ol>
-																	<p>These features were validated against the work done by researcher and intervention designer <a href="http://www.johnmarshallreeve.org">Johnmarshall Reeve</a>.
-																 </div>
-													</div>
-												</div>
+														<span class="image titleimg left "><img src="requirements.jpg" width=alt=""/></span>
+
+														<h2>Ideation</h2>
+														<h3>Defining Requirements</h3>
+														<p>Using notes from the Discovery process, we developed personas of both coaches and clients to guide us through the ideation process. Initial customer development suggested our product would have to: </p>
+													 <ol>
+														 <li>Deliver a hyper practical training experience across multiple sessions</li>
+														 <li>Allow the instructor to provide ongoing support at scale </li>
+														 <li>Guide coaches on dealing with challenging scenarios and conversations</li>
+														 <li>Fill the feedback vacuum coaches found themselves in.</li>
+														 <li>Include group discussions so students could share their questions and comments with the instructor and peers</li>
+														 <li>Provide evidence-based, actionable, engaging content</li>
+													 </ol>
+													 <p>These features were validated against the work done by researcher and intervention designer <a href="http://www.johnmarshallreeve.org">Johnmarshall Reeve</a>.</p>
+												 </div>
 												</section>
 
 												<section class="wrapper style1">
