--- a/projects/essentials/index.html
+++ b/projects/essentials/index.html
@@ -104,14 +104,36 @@
 														<h2>Ideation</h2>
 														<h3>Defining Requirements</h3>
 														<p>Using notes from the Discovery process, we developed personas of both coaches and clients to guide us through the ideation process. Initial customer development suggested our product would have to: </p>
-													 <ol>
-														 <li>Deliver a hyper practical training experience across multiple sessions</li>
-														 <li>Allow the instructor to provide ongoing support at scale </li>
-														 <li>Guide coaches on dealing with challenging scenarios and conversations</li>
-														 <li>Fill the feedback vacuum coaches found themselves in.</li>
-														 <li>Include group discussions so students could share their questions and comments with the instructor and peers</li>
-														 <li>Provide evidence-based, actionable, engaging content</li>
-													 </ol>
+
+														<div class="table-wrapper">
+																						<table>
+																							<tbody>
+																								<tr>
+																									<td><b>Features</b></td>
+																								</tr>
+																								<tr>
+																									<td>Deliver a hyper practical training experience across multiple sessions</td>
+																								</tr>
+																								<tr>
+																									<td>Allow the instructor to provide ongoing support at scale</td>
+																								</tr>
+																								<tr>
+																									<td>Guide coaches on dealing with challenging scenarios and conversations</td>
+																								</tr>
+																								<tr>
+																									<td>Fill the feedback vacuum coaches find themselves in.</td>
+																								</tr>
+																								<tr>
+																									<td>Include group discussions so students could share questions and comments with peers</td>
+																								</tr>
+																								<tr>
+																									<td>Provide evidence-based, actionable, engaging content</td>
+																								</tr>
+
+																							</tbody>
+																						</table>
+										 </div>
+
 													 <p>These features were validated against the work done by researcher and intervention designer <a href="http://www.johnmarshallreeve.org">Johnmarshall Reeve</a>.</p>
 												 </div>
 												</section>
@@ -282,7 +304,6 @@
 																 <div class="8u$">
 																	 <h3>Habits of Competence Support</h3>
 																	 <p>Coaches received daily instruction and feedback on providing Competence Support. Coaches ended this phase with improved ability to help clients feel more successful.</p>
-																	 <table>
 
 																				<div class="table-wrapper">
 																												<table>
