--- a/projects/essentials/index.html
+++ b/projects/essentials/index.html
@@ -103,7 +103,7 @@
 
 														<h2>Ideation</h2>
 														<h3>Defining Requirements</h3>
-														<p>Using notes from the Discovery process, we developed personas of both coaches and clients to guide us through the ideation process. Initial customer development suggested our product would have to: </p>
+														<p>Using notes from the Discovery process, we developed personas of both coaches and clients to guide us through the ideation process. This customer development work suggested some features that we validated against the work done by researcher and intervention designer <a href="http://www.johnmarshallreeve.org">Johnmarshall Reeve</a>.</p>
 
 														<div class="table-wrapper">
 																						<table>
@@ -134,7 +134,6 @@
 																						</table>
 										 </div>
 
-													 <p>These features were validated against the work done by researcher and intervention designer <a href="http://www.johnmarshallreeve.org">Johnmarshall Reeve</a>.</p>
 												 </div>
 												</section>
 
