--- a/projects/essentials/index.html
+++ b/projects/essentials/index.html
@@ -245,35 +245,35 @@
 																							<table>
 																								<tbody>
 																									<tr>
-																										<td><b>Habit 1</b></td>
+																										<td><b>Habit</b></td>
 																										<td><b>Open-Ended Questions</b></td>
 																									</tr>
 																									<tr>
-																										<td>Level 1</td>
+																										<td>1</td>
 																										<td>Ask an open-ended question</td>
 																									</tr>
 																									<tr>
-																										<td>Level 2</td>
+																										<td>2</td>
 																										<td>Get clients interested in their own experience</td>
 																									</tr>
 																									<tr>
-																										<td>Level 3</td>
+																										<td>3</td>
 																										<td>Help clients notice their personal values</td>
 																									</tr>
 																									<tr>
-																										<td><b>Habit 2</b></td>
+																										<td><b>Habit</b></td>
 																										<td><b>Reflective Listening Statements</b></td>
 																									</tr>
 																									<tr>
-																										<td>Level 1</td>
+																										<td>1</td>
 																										<td>Paraphrase one word your client said</td>
 																									</tr>
 																									<tr>
-																										<td>Level 2</td>
+																										<td>2</td>
 																										<td>Paraphrase motivations</td>
 																									</tr>
 																									<tr>
-																										<td>Level 3</td>
+																										<td>3</td>
 																										<td>Paraphrase negative emotions</td>
 																									</tr>
 																								</tbody>
@@ -295,35 +295,35 @@
 																							<table>
 																								<tbody>
 																									<tr>
-																										<td><b>Habit 1</b></td>
+																										<td><b>Habit</b></td>
 																										<td><b>Client Habit Design</b></td>
 																									</tr>
 																									<tr>
-																										<td>Level 1</td>
+																										<td>1</td>
 																										<td>Writing Habit Statements</td>
 																									</tr>
 																									<tr>
-																										<td>Level 2</td>
+																										<td>2</td>
 																										<td>Goldilocksing (creating optimal challenge)</td>
 																									</tr>
 																									<tr>
-																										<td>Level 3</td>
+																										<td>3</td>
 																										<td>Designing Core Habits</td>
 																									</tr>
 																									<tr>
-																										<td><b>Habit 2</b></td>
+																										<td><b>Habit</b></td>
 																										<td><b>Motivational Feedback</b></td>
 																									</tr>
 																									<tr>
-																										<td>Level 1</td>
+																										<td>1</td>
 																										<td>Give an unexpected compliment</td>
 																									</tr>
 																									<tr>
-																										<td>Level 2</td>
+																										<td>2</td>
 																										<td>Give informational feedback on the process</td>
 																									</tr>
 																									<tr>
-																										<td>Level 3</td>
+																										<td>3</td>
 																										<td>Give developmental feedback</td>
 																									</tr>
 																								</tbody>
@@ -345,35 +345,35 @@
 																								<table>
 																									<tbody>
 																										<tr>
-																											<td><b>Habit 1</b></td>
+																											<td><b>Habit</b></td>
 																											<td><b>Create Connection</b></td>
 																										</tr>
 																										<tr>
-																											<td>Level 1</td>
+																											<td>1</td>
 																											<td>Introduce your clients to each other</td>
 																										</tr>
 																										<tr>
-																											<td>Level 2</td>
+																											<td>2</td>
 																											<td>Invite clients to share reflections with each other</td>
 																										</tr>
 																										<tr>
-																											<td>Level 3</td>
+																											<td>3</td>
 																											<td>Invite clients to teach each other</td>
 																										</tr>
 																										<tr>
-																											<td><b>Habit 2</b></td>
+																											<td><b>Habit</b></td>
 																											<td><b>Foster Psychological Safety</b></td>
 																										</tr>
 																										<tr>
-																											<td>Level 1</td>
+																											<td>1</td>
 																											<td>Share a story about how you learned from failure</td>
 																										</tr>
 																										<tr>
-																											<td>Level 2</td>
+																											<td>2</td>
 																											<td>Show clients how to ask for support from the group</td>
 																										</tr>
 																										<tr>
-																											<td>Level 3</td>
+																											<td>3</td>
 																											<td>Have a crucial conversation with someone violating your community values</td>
 																										</tr>
 																									</tbody>
@@ -382,7 +382,7 @@
 											 </div>
 
 												 </div>
-												</section>		
+												</section>
 
 												<section id="three" class="wrapper style1">
 													<div class="inner">
