--- a/projects/essentials/index.html
+++ b/projects/essentials/index.html
@@ -103,7 +103,7 @@
 
 														<h2>Ideation</h2>
 														<h3>Defining Requirements</h3>
-														<p>Using notes from the Discovery process, we developed personas of both coaches and clients to guide us through the ideation process. This customer development work suggested some features that we validated against the work done by researcher and intervention designer <a href="http://www.johnmarshallreeve.org">Johnmarshall Reeve</a>.</p>
+														<p>Using notes from the Discovery process, we developed personas of coaches to guide us through the ideation process. This customer development work suggested some features that we validated against the work done by researcher and intervention designer <a href="http://www.johnmarshallreeve.org">Johnmarshall Reeve</a>.</p>
 
 														<div class="table-wrapper">
 																						<table>
