--- a/projects/habitrypros/index.html
+++ b/projects/habitrypros/index.html
@@ -104,7 +104,7 @@
 														</div>
 													 <div class="8u$">
 														 <h3>Defining Requirements</h3>
-														 <p>Using notes from the Discovery process, we developed personas of both coaches and clients to guide us through the ideation process. Initial customer development suggested our product would have to: </p>
+														 <p>Using notes from the Discovery process, we developed personas of coaches to guide us through the ideation process. Initial customer development suggested our product would have to: </p>
 														<ol>
 															<li>Be available cross-platform</li>
 															<li>Empower coaches to interact with and support each other</li>
